--- a/react-web-app/src/App.css
+++ b/react-web-app/src/App.css
@@ -130,6 +130,10 @@ html {
 .card {
   @apply bg-white p-11 shadow-md rounded-md text-center transition-transform duration-300 ease-in-out;
 }
+.card1{
+  height: 100%;
+  width: 100%;
+}
 
 .card1:hover {
   @apply scale-105; /* Scale to 1.1 on hover */
